--- a/css/main.css
+++ b/css/main.css
@@ -920,12 +920,11 @@ text-transform: uppercase;
 
 
 
-
 /* -----------footer---------- */
 .footer {display: flex;
   flex-direction: column;
   background: #16191D;
-  padding: 32px 308px 32px 280px;
+  padding: 32px 280px 32px 280px;
   
 }
 
@@ -944,7 +943,10 @@ text-transform: uppercase;
   margin: auto;
   background: #16191D;
   padding-right: 0;padding-left: 0;
+  padding-top: 32px;
 }
+
+
 
 .footer .footer__menu {
   display: flex;
@@ -1006,6 +1008,7 @@ text-transform: uppercase;
   .footer__wrap{
     display: flex;
     align-items: center;
+    justify-content: space-between;
     gap: 20px;
   }
 
