--- a/css/media.css
+++ b/css/media.css
@@ -128,6 +128,10 @@
         border-radius: 8px;
         
       }
+
+      .footer::before{
+        display: none;
+      }
     
 }
 
@@ -312,12 +316,9 @@
         margin-right: auto;
     }
 
-    .footer::before{
-        display: none;
-    }
-
+    
     .footer{
-        padding-top: 0;
+        /* padding-top: 0; */
         padding-bottom: 0;
     }
 }
