--- a/css/media.css
+++ b/css/media.css
@@ -353,7 +353,9 @@
         font-size: 28px;
     }
     .hero__data{
-        max-width: 438px;
+        /* max-width: 438px;
+        max-width: 515px; */
+        max-width: 100vw;
         padding-left: 10px;
         padding-right: 10px;
     }
@@ -372,6 +374,8 @@
     .footer__data-copyright{
         text-align: center;
     }
+
+    
 
 }
 
@@ -399,9 +403,19 @@
         padding: 50px 20px;
         
     }
+    .hero__data{
+        /* max-width: 468px;
+        max-width: 100vw; */
+        padding-left: 0;
+        
+        
+    }
 
+   
 
 }
+
+
 
 @media screen  and (max-width: 446px){
     .logo{
@@ -431,14 +445,11 @@
         
     }
 
-    .hero__data{
-        max-width: 400px;
-        
-        
-    }
-
+    
     
 }
+
+
 
 @media screen  and (max-width: 390px){
 .banner__title{
@@ -461,10 +472,6 @@
     display: block;
 }
 
-.hero__data{
-    max-width: 320px;
-    
-}
 
 .hero__title{
     font-size: 20px;
@@ -483,8 +490,8 @@
         
         font-weight: 500;
     }
-
-   
+ 
+    
 
     table tr{
         padding-left: 10px;padding-right: 10px;
@@ -500,6 +507,8 @@
    
 
 }
+
+
 
 
 /* -------------------bonus----------- */
@@ -524,7 +533,7 @@
 
 
 @media screen and (max-width: 1110px) {
-    .hero__data-bonuses,.hero__data-app{
+    .hero__data-bonuses,.hero__data-app, .hero__data-main{
         padding-left: 20px;padding-right: 10px;
         background: rgba(0,0,0, 0.5);
     }
@@ -562,10 +571,12 @@
 @media screen and (max-width: 469px) {
     .hero__data-bonuses,.hero__data-app{
         align-items:center;
+        padding-left: 0;
     }
 
     .breadcrumbs{
         justify-content: center;
+        max-width: max-content;
     }
 
     .hero__button-bonuses {
